--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -14,6 +14,8 @@ header{
     width: 1000px;
     text-align: center;
     margin-left: 300px;
+    border-bottom: navy;
+
     
     
 
@@ -91,3 +93,93 @@ percentage is the same as em*/
     
 }
 
+#cont{
+  margin-top: 00px;
+}
+
+.form{
+    margin-bottom: 300px;
+    position: relative;
+}
+#fName{
+    margin-left: 80px;
+    margin-top:20px;
+    height: 25px;
+    width: 200px;
+    
+}
+
+#email{
+    margin-left: 113px;
+    margin-top:20px;
+    height: 25px;
+    width: 200px;
+    
+}
+
+#tel{
+    margin-left: 57px;
+    margin-top:20px;
+    height: 25px;
+    width: 200px;
+}
+
+#country{
+    margin-left: 100px;
+    margin-top:20px;
+    height: 25px;
+    width: 200px;
+}
+
+#password{
+    margin-left: 89px;
+    margin-top:20px;
+    height: 25px;
+    width: 200px;
+}
+
+#datetime{
+    margin-left: 65px;
+    margin-top:20px;
+    height: 25px;
+    width: 200px;
+}
+ #comment{
+    margin-top:20px;
+    margin-left: 20px;
+ }
+
+ #detail{
+    margin-top:20px;
+    margin-left: 20px;
+ }
+
+.label{
+    margin-left: 20px;
+}
+
+#submit{
+    margin-top:20px;
+    margin-left: 20px;
+    width: 100px;
+    height: 40px;
+}
+
+
+#prof{
+    width:"250";
+    float:left;
+    text-align: right;
+    margin-left: 20px;
+
+}
+
+.profile{
+    margin-bottom: 300px;
+}
+
+.descript{
+    position: relative;
+    margin-left: 80px;
+    margin-top: 20px;
+}
