--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -174,6 +174,8 @@ input[type="date"]{
 
 .profile{
     display: inline-block;
+    width: 1550px;
+    border-bottom:  solid lightgray 10px;
 }
 
 .descript{
@@ -186,5 +188,17 @@ input[type="date"]{
     margin-left: 20px;
 }
 
+.head{
+    width: 1550px;
+    border-bottom:  solid lightgray 10px;
+}
+
+.social{
+    width: 1550px;
+    border-bottom:  solid lightgray 10px;
+    border-top:solid lightgray 10px ;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
 
 
