--- a/asset/css/style2.css
+++ b/asset/css/style2.css
@@ -115,19 +115,11 @@ a:visited{
 
 
 
-/* For the second question */
 
-/* .first{
-    background-color: white;
-    margin-left: 550px;
-    margin-top: 160px;
-    width: 500px;
-    height: 500px;
-    position: absolute;
-    border-top: solid black 5px;
-    padding-top: -100px;
-   
-} */
+
+
+/* FOR THE SECOND QUESTION */
+
 
 #first{
     background-color: lightyellow;
@@ -176,3 +168,37 @@ a:visited{
     border-left: solid black 5px;
     
 }
+
+header{
+    margin-left: 550px;
+    margin-top: 30px;
+}
+nav >ul > li
+{
+    display: inline-block;
+    font-size: 30px;
+    margin-left: 80px;
+}
+
+nav > ul > li:hover{
+    background-color: green;
+}
+
+nav > ul > li > a{
+    text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
