--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -4,21 +4,18 @@
 
 body{
     background-color: skyblue;
-     border: solid lightgray 10px; 
+     border: solid black 10px; 
     margin: 10px; 
 }
 
 header{
-    background-color: rgba(119,90,90, 0.6);
     /* position: fixed;  */
     width: 1000px;
     text-align: center;
     margin-left: 300px;
-    border-bottom: navy;
+    border-bottom: rgb(59, 59, 90);
 
     
-    
-
 }
 
 /* Targeting our blog */
@@ -74,9 +71,36 @@ img [scr="./asset/image/rounded.jpg"]{
 
 .cont{
     margin-right: 400px;
-    line-height: 1.5;
+    line-height: 2.0;
 
 }
+
+.cont2{
+    margin-right: 400px;
+    line-height: 2.0;
+
+}
+
+.cont3{
+    margin-right: 400px;
+    line-height: 2.0;
+
+}
+
+.cont4 > li{
+    margin-right: 400px;
+    line-height: 2.5;
+
+}
+
+.que{
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 400px;
+    line-height: 2.0;
+}
+
+
 /* the text inherit from the div rather than the default html
 em- means realtuve tot he container, doubles the font size of the default size 
 rem- takes the root container
