--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -15,6 +15,8 @@ header{
     width: 1000px;
     text-align: center;
     margin-left: 300px;
+    position: fixed;
+    background-color: magenta;
     
 }
 
@@ -33,6 +35,7 @@ text-decoration: none
 
 nav > ul > li:hover{
     background-color: green;
+    
 }
 
 @media screen and (max-width: 1200px) {
@@ -144,6 +147,7 @@ percentage is the same as em*/
     position: relative;
     border-bottom: lightgray solid 10px;
     padding-bottom: 20px;
+    margin-top: 100px;
  
 }
 
@@ -154,7 +158,7 @@ percentage is the same as em*/
     margin-right: 1.66666667%;
     padding: 1.66666667%;
     height: 400px; 
-    width: 410px;
+    width: 26.5%;
 }
 
 
@@ -290,3 +294,17 @@ input[type="date"]{
     padding-left: 20px;
 }
 
+/* For MyWorks */
+ .head nav > ul > li {
+    font-size: 30px;
+   
+}
+
+#alt{
+    background-color: lightskyblue;
+    border: none;
+} 
+
+.list{
+    margin-left: 30px;
+}
