--- a/asset/css/style3.css
+++ b/asset/css/style3.css
@@ -21,7 +21,7 @@ nav > ul > li > a{
 
 
 .aust1{
-    width: 200px;
+    width: 100%;
     height: 40px;
     background-color: red;
 }
@@ -352,23 +352,23 @@ nav > ul > li > a{
 
 .flags1{
     float:right;
-    margin-right: 100px;
-    margin-top: 100px;
-    padding: 10px;
+    margin-right: 5%;
+    margin-top: 6.5%;
+    padding: 1%;
 }
 
 .flags2{
     float: right;
-    margin-right: 350px;
-    margin-top: 100px;
-    padding: 10px;
+    margin-right: 23%;
+    margin-top: 6.5%;
+    padding: 1%;
 }
 
 .flags3{
     float: right;
-    margin-left:100px ;
-    margin-top: 100px;
-    padding: 10px;
+    margin-left:5%;
+    margin-top: 6.5%;
+    padding: 1%;
     position: absolute;
 }
 
